--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <input id="name_input" type="text"></input>
-        <svg style="width: 100%; height: 100%"></svg>
+        <svg id="main", style="width: 100%; height: 100%"></svg>
         <div id="qunit"></div>
         <div id="qunit-fixture"></div>
         <script src="https://code.jquery.com/qunit/qunit-2.0.1.js"></script>
